tests/baselines/reference/scopeResolutionIdentifiers(strict=true).errors.txt
scopeResolutionIdentifiers.ts(6,13): error TS2454: Variable 's' is used before being assigned.
scopeResolutionIdentifiers.ts(12,13): error TS2454: Variable 's' is used before being assigned.
scopeResolutionIdentifiers.ts(18,13): error TS2454: Variable 's' is used before being assigned.
scopeResolutionIdentifiers.ts(23,5): error TS2564: Property 's' has no initializer and is not definitely assigned in the constructor.
scopeResolutionIdentifiers.ts(24,14): error TS2729: Property 's' is used before its initialization.


==== scopeResolutionIdentifiers.ts (5 errors) ====
    // EveryType used in a nested scope of a different EveryType with the same name, type of the identifier is the one defined in the inner scope
    
    var s: string;
    module M1 {
        export var s: number;
        var n = s;
                ~
!!! error TS2454: Variable 's' is used before being assigned.
        var n: number;
    }
    
    module M2 {
        var s: number;
        var n = s;
                ~
!!! error TS2454: Variable 's' is used before being assigned.
        var n: number;
    }
    
    function fn() {
        var s: boolean;
        var n = s;
                ~
!!! error TS2454: Variable 's' is used before being assigned.
        var n: boolean;
    }
    
    class C {
        s: Date;
        ~
!!! error TS2564: Property 's' has no initializer and is not definitely assigned in the constructor.
        n = this.s;
                 ~
!!! error TS2729: Property 's' is used before its initialization.
!!! related TS2728 scopeResolutionIdentifiers.ts:23:5: 's' is declared here.
        x() {
            var p = this.n;
            var p: Date;
        }
    }
    
    module M3 {
        var s: any;
        module M4 {
            var n = s;
            var n: any;
        }
    }
    